# raytracer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  setup.bat  setup.sh
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: camera.h  image_writer.h  library.h  material.h  object.h  ray.h  raycast_result.h  renderer.h  scene.h  util.h
lib/src/: image_writer.cpp  library.cpp  material.cpp  object.cpp  renderer.cpp  scene.cpp  util.cpp
test/: CMakeLists.txt  test_library.cpp  test_renderer.cpp
